# marty-integration-tests

./: .env.test  .gitignore  .gitleaksignore  Dockerfile.integration-tests  LICENSE  Makefile  README.md  docker-compose.w3c-vc.yml  docker-compose.yml  pyproject.toml
.github/workflows/: integration-tests.yml  license-compliance.yml  official-interoperability.yml  official-suite-updates.yml  oidf-runner-update.yml  open-source-policy.yml  organization-quality.yml  release.yml
config/: base-images.json
config/marty-wallet/: nginx.conf
config/wallet/: _features.conf  features.conf  init-db.sql  trust.conf
conformance/: README.md  eudi-reference-interop.json  eudi-reference.compose.yml  expected-skips.json  marty-issuer.example.json  marty-issuer.offer-request.example.json  marty-verifier-haip.example.json  marty-verifier.example.json  oidf-runner-bridge.compose.yml  oidf-runner-prebuilt.compose.yml  oidf-runner.json  stack-under-test.json  upstream-review.json  w3c-vc-data-model-v2.json
conformance/locks/: w3c-vc-data-model-v2.npm-lock.json
requirements/: official-py312.in
scripts/: check_release_absent.py  conformance_compose.py  docker_context.py  eudi_harness_provenance.py  eudi_reference_compose.py  eudi_reference_interop.py  eudi_test_material.py  haip_test_certificates.py  official_fixture_bootstrap.py  official_interoperability_lane.py  official_stack_release.py  official_suite_checkout.py  official_suite_compose.py  official_suite_updates.py  oidf_conformance.py  oidf_docker_browser.py  oidf_docker_issuance.py  oidf_marty_offer.py  oidf_marty_public_login.py  oidf_marty_start_verification.py  oidf_marty_verifier.py  oidf_runner_compose.py  render_stack_env.py  sanitize_official_evidence.py  w3c_vc_conformance.py
services/eudi-wallet-harness/: Dockerfile  build.gradle.kts  gradle.lockfile  settings.gradle.kts
services/eudi-wallet-harness/gradle/: verification-metadata.xml
services/tls-proxy/: nginx.conf
tests/integration/: test_biometric_verification.py  test_icao_passport_conformance.py  test_oid4vci_issuer_conformance.py  test_oid4vp_verifier_conformance.py  test_org_authorization.py  test_passport_issuance_flow.py  test_passport_lifecycle_e2e.py  test_production_features.py  test_siop_v2_conformance.py  test_ui_claim_credential_e2e.py  test_wallet_oid4vci.py
tests/integration/fixtures/conformance/: credential_offer_by_ref.json  credential_offer_preauth.json  credential_response_jwt_vc.json  credential_response_mdoc.json  credential_response_sd_jwt.json  generate_fixtures.py  holder_key.json  issuer_metadata.json  issuer_metadata_legacy.json  nonce_response.json  oauth_as_metadata.json  (+3 more)
tests/integration/gateway/: README.md  WALLET_TESTS.md  __init__.py  conftest.py  mock_wallet_service.py  test_application_flow.py  test_architecture_improvements.py  test_canvas_credentials_gateway.py  test_cli_wallet_flows.py  test_complete_lifecycle.py  test_compliance_profile_integration.py  test_credential_issuance_flow.py  test_deployment_profile_flow.py  test_didcomm_v2_delivery.py  test_dtc_passport_flow.py  test_dtc_verification_flow.py  test_error_paths.py  test_eudi_interop.py  test_eudi_wallet_kit.py  test_eudi_wallet_kit_dtc.py  test_eudi_wallet_kit_vp.py  test_flow_definition.py  test_inspection_system_flow.py  test_marty_wallet.py  test_marty_wallet_flows.py  test_org_authorization.py  test_organization_flow.py  test_signing_keys_flow.py  test_verification_flow.py  test_wallet_interop.py  test_wallet_issuance_flow.py  test_wallet_oid4vci_gateway.py  test_wallet_verification_flow.py  test_zk_predicate_verification.py  wait-for-gateway.sh
tests/integration/ui/: README.md  conftest.py  support.py  test_post_login_console_contract.py
tests/oss_stack/: test_public_stack.py
tests/unit/: test_check_release_absent.py  test_docker_context.py  test_eudi_client_dcql.py  test_eudi_client_origin.py  test_eudi_compose_profile.py  test_eudi_harness_provenance.py  test_eudi_reference_compose_launcher.py  test_eudi_reference_interop.py  test_eudi_reference_network_isolation.py  test_eudi_test_material.py  test_eudi_wallet_kit_client.py  test_gateway_client_org_context.py  test_haip_test_certificates.py  test_icao_passport_profile.py  test_mdoc_evidence.py  test_mdoc_test_certificate.py  test_official_fixture_bootstrap.py  test_official_interoperability_lane.py  test_official_interoperability_workflow.py  test_official_stack_release.py  test_official_suite_checkout.py  test_official_suite_compose.py  test_official_suite_updates.py  test_oid4vc_wallet_client.py  test_oid4vci_safe_diagnostics.py  test_oidf_conformance.py  test_oidf_marty_public_login.py  test_oidf_marty_start_verification.py  test_oidf_marty_verifier.py  test_oidf_runner_compose.py  test_proof_jwt_audience.py  test_public_stack_compose.py  test_public_stack_metadata_contract.py  test_release_workflow.py  test_render_stack_env.py  test_sanitize_official_evidence.py  test_vp_token_builder.py  test_w3c_vc_conformance.py
(+19 files in other folders)
