[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marty-integration-tests"
version = "1.2.4"
description = "Integration test suite for the Marty ecosystem"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Adam Burdett" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
keywords = ["testing", "integration-tests", "credentials", "identity"]

dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "faker>=20.0.0",
    "pydantic>=2.0",
    "cryptography>=41.0.0",
    "cbor2>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
e2e = [
    "pytest-playwright>=0.4.0",
    "playwright>=1.40.0",
    "PyYAML>=6.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["tests"]

[tool.pytest.ini_options]
minversion = "7.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: Integration tests (require services running)",
    "oss_stack: Artifact-only tests for the public stack release",
    "wallet: Walt.ID wallet integration tests",
    "marty_wallet: Marty Authenticator web app integration tests (require RUN_WALLET_TESTS=true)",
    "slow: Slow running tests",
    "conformance: OID4VC conformance tests (OIDF certification prep — expect some failures exposing missing features)",
    "ui_contract: Browser-driven UI contract tests against a local Marty UI checkout",
    "eudi: EUDI reference implementation interoperability tests",
    "inspection: Physical-document inspection-system integration tests",
    "interop: Cross-wallet and cross-implementation interoperability tests",
    "passport: ICAO passport and eMRTD tests",
    "e2e: End-to-end tests requiring a complete deployed stack",
]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--capture=no",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "B", "A", "C4", "DTZ", "ISC", "PIE", "PT", "RSE", "RET", "SIM", "ARG"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
